--- a/ComacVisBackend/src/main/resources/templates/layout.html
+++ b/ComacVisBackend/src/main/resources/templates/layout.html
@@ -44,6 +44,7 @@
                     <ul class="nav navbar-nav">
                         <li><a th:href="@{/}" href="home.html">Home</a></li>
                         <li><a th:href="@{/query}" href="query.html">Query sparql</a></li>
+                        <li><a th:href="@{/search}" href="search.html">Test search</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <form class="navbar-form navbar-left" method="POST" th:action="@{/shutdown}">
