Działające wyszukiwanie oraz przeciąganie wyników na pulpit roboczy. Upiększone ładowanie wyników wyszukiwania.

--- a/d3/styles.css
+++ b/d3/styles.css
@@ -330,3 +330,10 @@ div.tooltip {
   border-radius: 8px;           
   pointer-events: none;         
 }
+
+.loading_message {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 2em;
+}
