--- a/ComacVisBackend/src/main/resources/templates/query.html
+++ b/ComacVisBackend/src/main/resources/templates/query.html
@@ -14,7 +14,9 @@
                         query: $('#QueryInput').val(),
                     };
                     console.log(req);
+                    var type = $('input[name=type]:checked').val()
                     var url = /*[[@{/data/sparql}]]*/ '.';
+                    url=url+"_"+type;
                     $.getJSON(url, req,
                             function (resp) {
                                 processAjaxResult(resp)
@@ -62,20 +64,39 @@
     <body>
         <h1 layout:fragment="header">SPARQL query</h1>
         <div layout:fragment="content" class="container">
-            <div class="input-group">
-                <input id="QueryInput" type="text" class="form-control" placeholder="enter sparql"></input>
-                <span class="input-group-btn">
-                    <button id="QueryButton" class="btn btn-default" type="button">Query!</button>
-                </span>
+
+            
+            <div class="form-group">
+                <label for="queryRow">Query:</label>
+                <div id="queryRow" class="input-group">
+                    <input id="QueryInput" type="text" class="form-control" placeholder="enter sparql"></input>
+                    <span class="input-group-btn">
+                        <button id="QueryButton" class="btn btn-default" type="button">Query!</button>
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="querySelector">Query type:</label>
+                <div id="querySelector" class="input-group btn-group"  data-toggle="buttons" >
+                    <label class="btn btn-default active">
+                        <input type="radio" name="type" value="select" autocomplete="off" checked="true"></input>SELECT
+                    </label>
+                    <label class="btn btn-default">
+                        <input type="radio" name="type" value="construct" autocomplete="off"></input>GRAPH
+                    </label>
+                    <label class="btn btn-default">
+                        <input type="radio" name="type" value="describe" autocomplete="off"></input>DESCRIBE
+                    </label>
+                </div>
             </div>
             <p>
-                <div id="MessageArea">
+            <div id="MessageArea">
 
-                </div>
-                <div id="ResultArea">
+            </div>
+            <div id="ResultArea">
 
-                </div>
-            </p>
+            </div>
+        </p>
     </div>
 
 </body>
