--- a/d3/css/styles.css
+++ b/d3/css/styles.css
@@ -77,9 +77,20 @@ g.blog.hover text {
     fill: #671eba;
 }
 
+g.project circle {
+    fill: #671eba;
+}
+
+g.project.hover circle {
+    stroke: #dbab00;
+}
+
+g.project.hover text {
+    fill: #dbab00;
+}
 g.hover circle {
-    fill: #fff;
-    stroke-width: 1.5px;
+    fill: #dbab00;
+    stroke-width: 1px;
 }
 
 .node text {
@@ -89,12 +100,12 @@ g.hover circle {
 
 .link {
     stroke: #888;
-    stroke-width: 1.5px;
+    stroke-width: 1px;
 }
 
 .link.hover {
     stroke: #444;
-    stroke-width: 1.5px;
+    stroke-width: 1px;
 }
 
 .similarity {
@@ -164,8 +175,9 @@ g.hover circle {
 }
 
 .tab-content > div > * {
-    margin: 15px 0px;
+    margin: 15px 0;
 }
+
 /* Search results */
 
 .search-result {
@@ -192,70 +204,82 @@ g.hover circle {
     border-radius: 4px;
 }
 
-.search-result.paper {
+.search-result.paper,
+.search-result[class*="paper"] {
     background: #292;
     border-color: #292;
 }
 
-.search-result.paper:hover {
+.search-result.paper:hover,
+.search-result[class*="paper"]:hover {
     background: white;
     color: #292;
     border-color: #292;
 }
 
-.search-result.author {
+.search-result.author,
+.search-result[class*="author"] {
     background: #1F77B4;
     border-color: #1F77B4;
 }
 
-.search-result.author:hover {
+.search-result.author:hover,
+.search-result[class*="author"]:hover {
     background: white;
     color: #1F77B4;
     border-color: #1F77B4;
 }
 
-.search-result.dataset {
+.search-result.dataset,
+.search-result[class*="dataset"] {
     background: #FF7F0E;
     border-color: #FF7F0E;
 }
 
-.search-result.dataset:hover {
+.search-result.dataset:hover,
+.search-result[class*="dataset"]:hover {
     background: white;
     color: #FF7F0E;
     border-color: #FF7F0E;
 }
 
-.search-result.journal {
+.search-result.journal,
+.search-result[class*="journal"] {
     background: #D62728;
     border-color: #D62728;
 }
 
+.search-result.journal:hover,
 .search-result[class*="journal"]:hover {
     background: white;
     color: #D62728;
     border-color: #D62728;
 }
 
-.search-result[class*="journal"] {
-    background: #D62728;
-    border-color: #D62728;
-}
-
-.search-result.journal:hover {
-    background: white;
-    color: #D62728;
-    border-color: #D62728;
-}
-
-.search-result.blog {
+.search-result.blog,
+.search-result[class*="blog"] {
     background: #671eba;
     border-color: #671eba;
 }
 
-.search-result.blog:hover {
+.search-result.blog:hover,
+.search-result[class*="blog"]:hover {
     background: white;
     color: #671eba;
     border-color: #671eba;
+}
+
+.search-result.project,
+.search-result[class*="project"] {
+    background: #dbab00;
+    border-color: #dbab00;
+}
+
+.search-result.project:hover,
+.search-result[class*="project"]:hover {
+    background: white;
+    color: #dbab00;
+    border-color: #dbab00;
 }
 
 .search-result .title span {
