Wersja 0.1 details dla elementu, jeszcze bez properties złożonych.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -45,6 +45,7 @@
                         <li><a th:href="@{/}" href="home.html">Home</a></li>
                         <li><a th:href="@{/query}" href="query.html">Query sparql</a></li>
                         <li><a th:href="@{/search}" href="search.html">Test search</a></li>
+                        <li><a th:href="@{/details}" href="details.html">Test details</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <form class="navbar-form navbar-left" method="POST" th:action="@{/shutdown}">
