Poprawione details - obsługuje teraz obiekty w source (dla artykułu czy bloga) Naprawiony błąd w stronach, wywołany zamianą parametru id na query.

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -11,7 +11,7 @@
                 console.log("loading button");
                 $('#QueryButton').on('click', function () {
                     var req = {
-                        id: $('#QueryInput').val(),
+                        query: $('#QueryInput').val(),
                     };
                     console.log(req);
                     var url = /*[[@{/data/details}]]*/ '.';
